--- a/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_don_hang.xml
@@ -27,201 +27,212 @@
             android:textColor="@color/black"
             android:layout_marginLeft="100dp"/>
     </LinearLayout>
-    <LinearLayout
-        android:background="@drawable/borderlinear"
-        android:layout_marginRight="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
-        android:padding="15dp"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:src="@drawable/background" />
+            android:orientation="vertical">
             <LinearLayout
-                android:layout_marginTop="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
+                android:background="@drawable/borderlinear"
+                android:layout_marginRight="3dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:padding="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/madh"
-                    android:textColor="@color/madh"
-                    android:textStyle="bold"
-                    android:textSize="30dp"
-                    android:layout_marginLeft="50dp"
-                    />
+                    android:orientation="horizontal"
+                    >
+
+                    <ImageView
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/background" />
+                    <LinearLayout
+                        android:layout_marginTop="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        >
+                        <TextView
+                            android:id="@+id/tvmaDH"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/madh"
+                            android:textColor="@color/madh"
+                            android:textStyle="bold"
+                            android:textSize="27dp"
+                            android:layout_marginLeft="50dp"
+                            />
+                        <TextView
+                            android:id="@+id/tenDonHang"
+                            android:layout_marginTop="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/tenmathang"
+                            android:textSize="23dp"
+                            android:layout_marginLeft="10dp"
+                            android:textColor="@color/black"
+                            android:drawablePadding="5dp"
+                            android:drawableLeft="@drawable/ic_baseline_wysiwyg_24"
+                            />
+                        <TextView
+                            android:id="@+id/tvsoluong"
+                            android:layout_marginTop="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Số lượng"
+                            android:textSize="23dp"
+                            android:layout_marginLeft="10dp"
+                            android:textColor="@color/black"
+                            android:drawablePadding="5dp"
+                            android:drawableLeft="@drawable/ic_baseline_filter_9_plus_24"
+                            />
+
+                    </LinearLayout>
+
+                </LinearLayout>
                 <TextView
+                    android:id="@+id/tvtrangThai"
                     android:layout_marginTop="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/tenmathang"
-                    android:textSize="25dp"
+                    android:text="Trạng thái"
+                    android:textSize="15dp"
                     android:layout_marginLeft="10dp"
-                    android:textColor="@color/black"
+                    android:textColor="#E30834"
                     android:drawablePadding="5dp"
-                    android:drawableLeft="@drawable/ic_baseline_wysiwyg_24"
-                    />
-                <TextView
-                    android:layout_marginTop="5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Số lượng"
-                    android:textSize="25dp"
-                    android:layout_marginLeft="10dp"
-                    android:textColor="@color/black"
-                    android:drawablePadding="5dp"
-                    android:drawableLeft="@drawable/ic_baseline_filter_9_plus_24"
                     />
 
+                <TextView
+                    android:id="@+id/tvtenCuaHang"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tên cửa hàng"
+                    android:textSize="23dp"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/black"
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@drawable/ic_baseline_store_24"
+                    />
+                <TextView
+                    android:id="@+id/tvDiaChiCuaHang"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Địa chỉ cửa hàng"
+                    android:textSize="23dp"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/black"
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@drawable/ic_baseline_location_on_24"
+                    />
+                <TextView
+                    android:id="@+id/tvsdtCuaHang"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="SĐT cửa hàng"
+                    android:textSize="23dp"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/black"
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@drawable/ic_baseline_local_phone_24"
+                    />
+                <TextView
+                    android:id="@+id/sdtNguoiNhan"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="SĐT người nhận"
+                    android:textSize="23dp"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/black"
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@drawable/ic_baseline_local_phone_24"
+                    />
+                <TextView
+                    android:id="@+id/tvDiaChiNguoiNhan"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Địa chỉ người nhận"
+                    android:textSize="23dp"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/black"
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@drawable/ic_baseline_location_on_24"
+                    />
+                <TextView
+                    android:id="@+id/tvtenNguoiNhan"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tên người nhận"
+                    android:textSize="23dp"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/black"
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@drawable/ic_baseline_person_24"
+                    />
+                <EditText
+                    android:id="@+id/edtGhiChu"
+                    android:layout_marginLeft="10dp"
+                    android:hint="Ghi chú"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:lines="2"
+                    android:inputType="textMultiLine"/>
+
+                <TextView
+                    android:id="@+id/tvTongDon"
+                    android:layout_margin="30dp"
+                    android:layout_gravity="end"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tổng đơn"
+                    android:textSize="25dp"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/black"
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@drawable/ic_baseline_attach_money_24"
+                    android:layout_marginRight="5dp"
+                    android:gravity="end" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <Button
+                        android:layout_width="180dp"
+                        android:layout_height="50dp"
+                        android:text="Nhận đơn"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        android:background="@drawable/botronbtn"
+                        />
+                    <Button
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_width="170dp"
+                        android:layout_height="50dp"
+                        android:text="Từ chối đơn"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        android:background="@drawable/botronbtnfail"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginRight="15dp"
+                        />
+                </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Trạng thái"
-            android:textSize="25dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="#E30834"
-            android:drawablePadding="5dp"
-            />
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Khối lượng"
-            android:textSize="25dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/black"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/ic_baseline_linear_scale_24"
-            />
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tên cửa hàng"
-            android:textSize="25dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/black"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/ic_baseline_store_24"
-            />
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Địa chỉ cửa hàng"
-            android:textSize="25dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/black"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/ic_baseline_location_on_24"
-            />
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SĐT cửa hàng"
-            android:textSize="25dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/black"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/ic_baseline_local_phone_24"
-            />
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SĐT người nhận"
-            android:textSize="25dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/black"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/ic_baseline_local_phone_24"
-            />
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Địa chỉ người nhận"
-            android:textSize="25dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/black"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/ic_baseline_location_on_24"
-            />
-        <TextView
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tên người nhận"
-            android:textSize="25dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/black"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/ic_baseline_person_24"
-            />
-        <EditText
-            android:layout_marginLeft="10dp"
-            android:hint="Ghi chú"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:lines="2"
-            android:inputType="textMultiLine"/>
-
-        <TextView
-            android:layout_margin="30dp"
-            android:layout_gravity="end"
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tổng đơn"
-            android:textSize="25dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/black"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/ic_baseline_linear_scale_24"
-            android:layout_marginRight="5dp"
-            android:gravity="end" />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
-                android:layout_width="180dp"
-                android:layout_height="50dp"
-                android:text="Nhận đơn"
-                android:textColor="@color/black"
-                android:textSize="15dp"
-                android:background="@drawable/botronbtn"
-                />
-            <Button
-                android:layout_marginHorizontal="20dp"
-                android:layout_width="170dp"
-                android:layout_height="50dp"
-                android:text="Từ chối đơn"
-                android:textColor="@color/black"
-                android:textSize="15dp"
-                android:background="@drawable/botronbtnfail"
-                android:layout_marginLeft="0dp"
-                android:layout_marginRight="15dp"
-                />
-        </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
 
 
