--- a/app/src/main/res/layout/itemdonhang.xml
+++ b/app/src/main/res/layout/itemdonhang.xml
@@ -6,14 +6,13 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:background="@drawable/borderlinear"
+    android:id="@+id/lndonhang"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="-50dp"
-        tools:layout_editor_absoluteY="142dp">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imganhdonhang"
